k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-api-deployment
  labels:
    app: bank-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: bank-api
  template:
    metadata:
      labels:
        app: bank-api
    spec:
      containers:
      - name: bank-api-container
        image: europe-central2-docker.pkg.dev/bank-devops-lab/bank-apps-repo/bank-api-service:v2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/bank
          readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
      volumes:
      - name: config-volume
        configMap:
          name: bank-api-config
          items:
          - key: bank-config.json
            path: config.json
