k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-api-service
spec:
  type: ClusterIP
  selector:
    app: bank-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
