k8s/network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: bank-prod
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
